Fixed Light / Dark mode for Chromium and other browsers

--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 :root {
     color-scheme: light dark;
-    --black: #1A1A1A;
-    --white: #F5F5F5;
-    --light-gray: #AAAAAA;
-    --dark-gray: #666666;
-    --red: #FF4444;
-    --green: #44BB44;
+    --bg: #F5F5F5;
+    --primary: #1A1A1A;
+    --secondary: #666666;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --bg: #1A1A1A;
+        --primary: #F5F5F5;
+        --secondary: #AAAAAA;
+    }
 }
 
 * {
@@ -14,18 +19,18 @@
 }
 
 body {
-    background: light-dark(var(--white), var(--black));
-    height: auto;
+    background: var(--bg);
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: top;
+    justify-content: flex-start;
     align-items: center;
     font-family: "Happy Monkey", Arial, Helvetica, sans-serif;
 }
 
 #canvas {
-    border-left: light-dark(var(--black), var(--white)) solid 0.125rem;
-    border-right: light-dark(var(--black), var(--white)) solid 0.125rem;
+    border-left: var(--primary) solid 0.125rem;
+    border-right: var(--primary) solid 0.125rem;
 }
 
 #title {   
@@ -34,9 +39,9 @@ body {
     font-size: 2rem;
     text-align: center;
     background: transparent;
-    color: light-dark(var(--black), var(--white));
-    border-top: light-dark(var(--black), var(--white)) solid 0.125rem;
-    border-bottom: light-dark(var(--black), var(--white)) solid 0.125rem ;
+    color: var(--primary);
+    border-top: var(--primary) solid 0.125rem;
+    border-bottom: var(--primary) solid 0.125rem;
     font-weight: bold;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -53,7 +58,7 @@ body {
     font-weight: bold;
     padding-left: 1rem;
     padding-right: 1rem;
-    border-bottom: light-dark(var(--black), var(--white)) solid 0.125rem;
+    border-bottom: var(--primary) solid 0.125rem;
 }
 
 #message {
@@ -64,11 +69,11 @@ body {
     font-weight: bold;
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
-    border-bottom: light-dark(var(--black), var(--white)) solid 0.125rem;
+    border-bottom: var(--primary) solid 0.125rem;
 }
 
 #message-2 {
-    color: light-dark(var(--dark-gray), var(--light-dark));
+    color: var(--secondary);
 }
 
 #grid {
@@ -90,7 +95,7 @@ body {
     align-items: center;
     font-size: 2.5rem;
     margin: 0.25rem;
-    border: light-dark(var(--black), var(--white)) solid 0.125rem;
+    border: var(--primary) solid 0.125rem;
     border-radius: 0.25rem;
     cursor: pointer;
 }
@@ -101,10 +106,9 @@ body {
     font-size: 1.5rem;
     text-align: center;
     background: transparent;
-    color: light-dark(var(--black), var(--white));
-    border-top: light-dark(var(--black), var(--white)) solid 0.125rem;
-    border-bottom: light-dark(var(--black), var(--white)) solid 0.125rem ;
-    font-weight: bold;
+    color: var(--primary);
+    border-top: var(--primary) solid 0.125rem;
+    border-bottom: var(--primary) solid 0.125rem;
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
 }
